# striatum

./: .coveragerc  .editorconfig  .gitignore  .pylintrc  .travis.yml  README.md  circle.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_linucb.py  tox.ini  unittest_linucb.py
data_simulations/: data_generator.py  exp3_linear_payoff.py  exp4p_linear_payoff.py  linthompsamp_linear_payoff .py  linucb_linear_payoff.py  linucb_random_payoff.py  simulation_linear_payoff.py  ucb_linear_payoff.py
docs/: Makefile  api_reference.rst  conf.py  index.rst  make.bat  striatum.bandit.rst  striatum.rst  striatum.storage.rst
docs/simulations/: simulations.rst
examples/: movielens.py  movielens_bandit.py  movielens_preprocess.py
simulation/: exp4p_linear_payoff.py  gen_simulation_plots.py  linucb_linear_payoff.py  simulation.py  simulation_exp3.py  simulation_exp4p.py  simulation_hyblinucb.py  simulation_linthompsamp.py  simulation_linucb.py  simulation_ucb1.py
striatum/: __init__.py  rewardplot.py  simulation.py
striatum/bandit/: __init__.py  bandit.py  exp3.py  exp4p.py  hyblinucb.py  hybrid_linucb.py  linthompsamp.py  linthompsamp_en.py  linucb.py  ucb1.py
striatum/bandit/tests/: base_bandit_test.py  test_dummy2.py  test_exp3.py  (+5 more)
striatum/base/: interfaces.py
striatum/cbma/: bandit.py  cbma.py  degreedy.py  egreedy.py  linucb.py
striatum/storage/: __init__.py  action.py  history.py  model.py  recommendation.py
striatum/utils/: __init__.py
test/: test_dummy.py
tests/: test_exp3.py  test_exp4p.py  test_linthompsamp.py  test_linucb.py  test_ucb1.py
(+24 files in other folders)
