[tool.poetry]
name = "buzzni-ai-reco-mab"
version = "1.0.0"
description = ""
authors = ["SeonbeomKim <jeffrey@buzzni.com>"]
license = "BSD-2-Clause"

packages = [
	{ include = "buzzni" }
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.16.4"
six = "1.13.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
